update server express

--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "morgan": "^1.9.1"
   },
   "private": true,
   "devDependencies": {
