--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "webpack-dev-server --config webpack.dev.config.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase-admin": "^8.1.0",
+    "firebase-functions": "^3.0.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "axios": "^0.18.0",
